Bug 49501 - FORMATTING: RTF Formatting Issue
Summary: FORMATTING: RTF Formatting Issue
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.3 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:3.6.0 target:3.5.4
Keywords: filter:rtf, regression
: 49413 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-05-04 10:43 UTC by David Baucum
Modified: 2015-12-17 12:06 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
This file shows the improper formatting. (23.67 KB, application/rtf)
2012-05-04 10:43 UTC, David Baucum
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Baucum 2012-05-04 10:43:03 UTC
Created attachment 61040 [details]
This file shows the improper formatting.

Problem description: 
Formatting problem.

Steps to reproduce:
1. Open the attached RTF.
2. Notice improperly formatted "Contractor Weekly Time Sheet"

Current behavior:
Formatting is incorrect.

Expected behavior:
Formatting should match LibreOffice 3.4 and below and other RTF viewers.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/535.19 (KHTML, like Gecko) Ubuntu/12.04 Chromium/18.0.1025.151 Chrome/18.0.1025.151 Safari/535.19
Comment 1 s-joyemusequna 2012-05-06 07:05:24 UTC
Works with LibO 3.4.5 (and Word 2007). Tested on Windows XP.
Doesn't work with LibO 3.5.3 (problem with table => 2 pages instead of one etc.) => REGRESSION
Comment 2 Miklos Vajna 2012-05-09 02:31:31 UTC
Confirmed, assign to me.
Comment 3 Not Assigned 2012-05-09 03:08:55 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d6acd86fe1d2924a378e3053f83d47084a8bb108

fdo#49501 RTF_MARGL/R/T/B should also set the current margin
Comment 4 Miklos Vajna 2012-05-09 03:24:43 UTC
Fixed in master, closing - will request cherry-pick to  -3-5 a bit later.
Comment 5 Not Assigned 2012-05-11 08:38:00 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71669deb856bcadba38f135837537ee8bd465f29&g=libreoffice-3-5

fdo#49501 RTF_MARGL/R/T/B should also set the current margin


It will be available in LibreOffice 3.5.4.
Comment 6 s-joyemusequna 2012-05-19 01:05:01 UTC
Tested with LOdev 3.6 (master - 18-May-2012 02h44 x86@6-fast; Build ID: 8b1d29b) and with LibO 3.5.4 RC1 under Windows Vista 64 and Windows XP.

It doesn't work. (It works with LibO 3.4.5 and Word 2007)
Comment 7 Miklos Vajna 2012-05-29 01:21:01 UTC
*** Bug 49413 has been marked as a duplicate of this bug. ***
Comment 8 Miklos Vajna 2012-05-30 01:43:28 UTC
Hi s-joyemusequna,

Ah, indeed - I only read your comment saying the margins are incorrect; the "Contractor Weekly Time Sheet" string is still not a single line. Could you please open a separate bug for that issue? Would be confusing to handle that in this bug, which talks about margin issues, fixed already in 3.5.4.

(So in short please reopen this only in case the doc starts to have 2 pages again.)

Thanks,

Miklos
Comment 9 s-joyemusequna 2012-05-30 04:21:01 UTC
Hi Miklos,

The document *has* 2 pages for me, the last one is empty, probably due to improperly formatted "Contractor Weekly Time Sheet". Tested with LibO 3.5.4 RC2 and LOdev 3.6 (master - 23-May-2012 03h12 x86@6-fast; Build ID: 7e65666) under Windows Vista 64 and Windows XP.

I did never say the margins were incorrect (you probably meant bug 49413 ?).
Comment 10 Robinson Tryon (qubit) 2015-12-17 12:06:27 UTC
Migrating Whiteboard tags to Keywords: (filter:rtf)
Replace rtf_filter -> filter:rtf.
[NinjaEdit]