fdo#49501 RTF_MARGL/R/T/B should also set the current margin

Change-Id: I I69b92d0cd07c9f08f14affb447b55b26b2556186